# R-TYPE

./: .gitignore  Button_8hpp_source.html  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Client_8hpp_source.html  Components_8hpp_source.html  Doxyfile  Events_8hpp_source.html  Game_8hpp_source.html  KeyEventMapping_8hpp_source.html  LibLoader_8hpp_source.html  Makefile  Menu_8hpp_source.html  Random_8hpp_source.html  Readme.md  Registry_8hpp_source.html  air_type  annotated.html  build.bat  clang.sh  classAEvent.html  classArgumentError.html  classButton-members.html  classButton.html  classClient-members.html  classClient.html  classCollisionEvent.html  classDeathEvent.html  classGame-members.html  classGame.html  classHoverBtnEvent-members.html  classLibLoader-members.html  classLibLoader.html  classMenu-members.html  classMenu.html  classPositionStayInWindowBounds-members.html  classPositionStayInWindowBounds.html  classRandom-members.html  classRandom.html  (+146 more)
.github/workflows/: github.yml  mirroring.yml  release.yml
Bootstrap/: Entity.cpp  Registry.hpp  SparseArray.hpp  SparseArray.tpp  ZipperIterator.hpp  ZipperIterator.tpp  main.cpp
Debug/: sqlite3.lib
assets/map/: stage2.txt  stage_1.txt
assets/model/: bzorg.json  soldier.json  zuzz.json
assets/stage/: stage_1.json  stage_2.json
db/: rtype.db
html/: Button_8hpp_source.html  Client_8hpp_source.html  Components_8hpp_source.html  Errors_8hpp_source.html  Events_8hpp_source.html  Game_8hpp_source.html  KeyEventMapping_8hpp_source.html  LibLoader_8hpp_source.html  Menu_8hpp_source.html  Network_8hpp_source.html  Registry_8hpp_source.html  RoomUtils_8hpp_source.html  Server_8hpp_source.html  SparseArray_8hpp_source.html  Timer_8hpp_source.html  ZipperIterator_8hpp_source.html  annotated.html  classAEvent-members.html  classAEvent.html  classArgumentError-members.html  classArgumentError.html  classButton-members.html  classButton.html  classClickBtnEvent-members.html  classClickBtnEvent.html  classClient-members.html  classClient.html  classCollisionEvent-members.html  classCollisionEvent.html  classCreateExplosionEvent-members.html  classCreateExplosionEvent.html  classDatabaseError-members.html  classDatabaseError.html  classDeathEvent-members.html  classDeathEvent.html  classError-members.html  classError.html  classEventListener-members.html  classEventListener.html  classGame-members.html  (+491 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+88 more)
latex/: Button_8hpp_source.tex  Client_8hpp_source.tex  Components_8hpp_source.tex  Errors_8hpp_source.tex  Events_8hpp_source.tex  Game_8hpp_source.tex  KeyEventMapping_8hpp_source.tex  LibLoader_8hpp_source.tex  Menu_8hpp_source.tex  Network_8hpp_source.tex  Random_8hpp_source.tex  Registry_8hpp_source.tex  Server_8hpp_source.tex  SparseArray_8hpp_source.tex  Timer_8hpp_source.tex  ZipperIterator_8hpp_source.tex  annotated.tex  classAEvent.eps  classAEvent.tex  classArgumentError.eps  classArgumentError.tex  classButton.tex  classClickBtnEvent.eps  classClickBtnEvent.tex  classClient.tex  classCollisionEvent.eps  classCollisionEvent.tex  classCreateExplosionEvent.eps  classCreateExplosionEvent.tex  classDatabaseError.eps  classDatabaseError.tex  classDeathEvent.eps  classDeathEvent.tex  classError.eps  classError.tex  classEventListener.tex  classGame.tex  classHoverBtnEvent.eps  classHoverBtnEvent.tex  classIEvent.eps  (+285 more)
lib/: libgmock.so.1.11.0  libgmock_main.so.1.11.0  libgtest.so.1.11.0  libgtest_main.so.1.11.0
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_10.js  classes_3.js  classes_f.js  enums_2.js  enumvalues_6.js  functions_0.js  functions_1.js  functions_12.js  functions_13.js  functions_16.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_f.js  related_0.js  searchdata.js  (+2 more)
sqlite3/src/sqlite3_external-build/: config.status  libsqlite3.la  libtool  sqlite3.pc
sqlite3/tmp/: sqlite3_external-cfgcmd.txt
sqlite_windows/: shell.c
src/: Errors.hpp  FilesUtils.hpp  KeyEventMapping.hpp  Network.hpp  Random.hpp  Timer.hpp  main.cpp
src/Client/: Button.cpp  Button.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Game.cpp  Game.hpp  LibLoader.hpp  Menu.cpp  Menu.hpp  imconfig-SFML.h  imgui-SFML.cpp  imgui-SFML.h  main.cpp
src/Ecs/: CMakeLists.txt  CampaignUtils.hpp  Components.hpp  Events.cpp  Events.hpp  Managers.hpp  MapManager.cpp  MapManager.hpp  ModelManager.cpp  ModelManager.hpp  Registry.hpp  RoomUtils.hpp  SparseArray.hpp  SparseArray.tpp  StageManager.cpp  StageManager.hpp  ZipperIterator.hpp  entity.hpp  main.cpp
src/Ecs/Systems/: AutomaticShootSystem.hpp  ButtonSystem.hpp  ClickableSystem.hpp  CollisionSystem.hpp  ControlSystem.hpp  DrawSystem.hpp  EnemyGeneration.hpp  InputSystem.hpp  JumpSystem.hpp  KillOnTimerSystem.hpp  KillWhenOutOfBounds.hpp  ParallaxSystem.hpp  PositionSystem.hpp  ResetOnMoveSystem.hpp  RotationSystem.hpp  SFMLAnimatedDrawSystem.hpp  SFMLDrawSystem.hpp  SFMLGravitySystem.hpp  SFMLTextDrawSystem.hpp  ScaleSystem.hpp  ShieldSystem.hpp  Systems.hpp
src/Ecs/tests/: TestSparseArray.cpp  TestZipperIterator.cpp  a.out
src/Logger/: logger.hpp
src/Server/: CMakeLists.txt  Server.cpp  Server.hpp  database.cpp  main.cpp
src/Server/ecs/: Events.cpp  Events.hpp  Registry.hpp
temp/Common/: GraphicalEncapsulation.cpp  GraphicalEncapsulation.hpp  main.cpp
tests/: CMakeLists.txt  TestSparseArray.cpp  TestZipperIterator.cpp
(+20 files in other folders)
